Incorporating Prof. Blocker's comments on theory chapter

--- a/biblio.bib
+++ b/biblio.bib
@@ -1018,3 +1018,69 @@ url           = "https://cds.cern.ch/record/2683100",
       url           = "https://cds.cern.ch/record/2285585",
       doi           = "10.17181/CERN.FOZZ.ZP3Q",
 }
+@article{NeutrinoOscillation,
+  title = {Evidence for an Oscillatory Signature in Atmospheric Neutrino Oscillations},
+  author = {Ashie, Y. and Hosaka, J. and Ishihara et al.},
+  journal = {Phys. Rev. Lett.},
+  volume = {93},
+  issue = {10},
+  pages = {101801},
+  numpages = {6},
+  year = {2004},
+  month = {Sep},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.93.101801},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.93.101801}
+}
+
+@article{AlphaQCD,
+	doi = {10.1016/j.ppnp.2016.04.003},
+	url = {https://doi.org/10.1016%2Fj.ppnp.2016.04.003},
+	year = 2016,
+	month = {sep},
+	publisher = {Elsevier {BV}}, 
+	volume = {90},
+	pages = {1--74},
+	author = {Alexandre Deur and Stanley J. Brodsky and Guy F. de T{\'{e}}ramond},
+	title = {The {QCD} running coupling},
+	journal = {Progress in Particle and Nuclear Physics}
+}
+@article{AlphaQED,
+	doi = {10.1140/epjc/s2005-02389-3},
+	url = {https://doi.org/10.1140%2Fepjc%2Fs2005-02389-3},
+	year = 2006,
+	month = {jan},
+	publisher = {Springer Science and Business Media {LLC}},
+	volume = {45},
+	number = {1},
+	pages = {1--21},
+	title = {{Measurement of the running of the QED couplingin small-angle Bhabha scattering at LEP}},
+	journal = {The European Physical Journal C},
+      author = {{The OPAL Collaboration}}
+}
+@article{EWK_S,
+title = {{Electromagnetic and weak interactions}},
+journal = {Physics Letters},
+volume = {13},
+number = {2},
+pages = {168-171},
+year = {1964},
+issn = {0031-9163},
+doi = {https://doi.org/10.1016/0031-9163(64)90711-5},
+url = {https://www.sciencedirect.com/science/article/pii/0031916364907115},
+author = {{A. Salam and J.C. Ward}}
+}
+@article{EWK_W,
+  title = {{A Model of Leptons}},
+  author = {{Weinberg, Steven}},
+  journal = {Phys. Rev. Lett.},
+  volume = {19},
+  issue = {21},
+  pages = {1264--1266},
+  numpages = {0},
+  year = {1967},
+  month = {Nov},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.19.1264},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.19.1264}
+}
