--- a/sections/theory_EWkProcess.tex
+++ b/sections/theory_EWkProcess.tex
@@ -1,7 +1,7 @@
 \section{ Electroweak Diboson Physics }	
 \label{sec:EWKPheno}
 
-In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{\geq 2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^6$ contribute to the production of di-$Z$ bosons in an association of two jets ($ZZjj$) \cite{CMSRun2ZZjj}. Figures \ref{fig:ZZjjFeynmanDiag_QCD_qq} and \ref{fig:ZZjjFeynmanDiag_QCD_gg} show the Feynman diagram at leading order for the QCD ZZjj process, whereas figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagram at leading order for the EWK production of ZZjj \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured process and the VBS process restores the unitarity  \cite{VBSWWWW}. As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ bosons get their masses via the BEH mechanism through EWSB. As a consequence of EWSB, the $W$ and $Z$ bosons acquire an additional degree of freedom (the longitudinal polarization mode) whose scattering interfere with the Higgs-featured processes. Thus, the study of electroweak production of the di-$Z$ bosons in association with two jets provides a direct probe of the EWSB, which is at the heart of the SM \cite{CMSRun2ZZjj}. 
+In LHC, two types of physics processes, the QCD production at the order $\alpha_{S}^{\geq 2} \alpha_{EWK}^{4}$ and the EWK production at order $\alpha_{EWK}^6$ contribute to the production of di-$Z$ bosons in an association of two jets ($ZZjj \rightarrow 4\ell jj$) \cite{CMSRun2ZZjj}. Figures \ref{fig:ZZjjFeynmanDiag_QCD_qq} and \ref{fig:ZZjjFeynmanDiag_QCD_gg} show the Feynman diagram at leading order for the QCD ZZjj process, whereas figure \ref{fig:ZZjjFeynmanDiag_EWk} shows the Feynman diagram at leading order for the EWK production of ZZjj \cite{PowhegV2ZZjj}. The EWK production consists of two sets of interactions, first, the Vector Boson Scattering processes involving either triple (figure \ref{fig:ZZjjFeynmanDiag_EWk_a}) or quartic (figure \ref{fig:ZZjjFeynmanDiag_EWk_b}) self-interactions of the gauge-bosons, and second the diagrams featuring the Higgs bosons (figure \ref{fig:ZZjjFeynmanDiag_EWk_c} $\&$ \ref{fig:ZZjjFeynmanDiag_EWk_d}). The scattering amplitudes of the VBS processes involving longitudinally polarized vector bosons grow quadratically with the center of mass energy ($\sqrt{s}$), eventually violating the unitarity bounds. The precise SM interference between the Higgs-featured process and the VBS process restores the unitarity  \cite{VBSWWWW}. As discussed in Section \ref{subsubsec:HiggsMech}, the massive $W$ and $Z$ bosons get their masses via the BEH mechanism through EWSB. As a consequence of EWSB, the $W$ and $Z$ bosons acquire an additional degree of freedom (the longitudinal polarization mode) whose scattering interfere with the Higgs-featured processes. Thus, the study of electroweak production of the di-$Z$ bosons in association with two jets provides a direct probe of the EWSB, which is at the heart of the SM \cite{CMSRun2ZZjj}. 
 
 \begin{figure}[!htbp]
   \begin{center}
@@ -9,7 +9,7 @@ In LHC, two types of physics processes, the QCD production at the order $\alpha_
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjqg.pdf}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjgg.pdf}
    \end{center}
-  \caption{Typical diagrams of LO $qq$ and $gg$ induced QCD $\alpha_{S}^2 \alpha_{EWK}^{4}$ production of $ZZjj$. \label{fig:ZZjjFeynmanDiag_QCD_qq}}
+  \caption{Typical diagrams of LO $qq$ and $gg$ induced QCD $\alpha_{S}^2 \alpha_{EWK}^{2}$ production of $ZZjj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. \label{fig:ZZjjFeynmanDiag_QCD_qq}}
  \end{figure} 
  
 \begin{figure}[!htbp]
@@ -17,7 +17,7 @@ In LHC, two types of physics processes, the QCD production at the order $\alpha_
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjbox.pdf}
   \includegraphics[width=0.31\textwidth]{figures/Theory/diagramQCDZZjjggH.pdf}\\
   \end{center}
-  \caption{Typical diagrams for LO $gg$ loop induced the QCD $\alpha_{S}^4\alpha_{EWK}^{4}$ production of $ZZjj$. \label{fig:ZZjjFeynmanDiag_QCD_gg}}
+  \caption{Typical diagrams for LO $gg$ loop induced the QCD $\alpha_{S}^4\alpha_{EWK}^{2}$ production of $ZZjj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. \label{fig:ZZjjFeynmanDiag_QCD_gg}}
  \end{figure}
  
 \begin{figure}[ht]
@@ -45,7 +45,7 @@ In LHC, two types of physics processes, the QCD production at the order $\alpha_
   \caption{t-channel Higgs ZZjj Production.}
   \label{fig:ZZjjFeynmanDiag_EWk_d}
 \end{subfigure}\\
-\caption{Feynman diagrams at LO for the EWK $\alpha_{EWK}^6$ production of $ZZjj$.}
+\caption{Feynman diagrams at LO for the EWK $\alpha_{EWK}^4$ production of $ZZjj$. The two $Z\rightarrow \ell \ell$ vertices each contribute an additional electroweak coupling of $\alpha_{EWK}$. }
 \label{fig:ZZjjFeynmanDiag_EWk}
 \end{figure}
 
@@ -62,8 +62,7 @@ The triple and quartic self-interactions of the gauge bosons arise from the squa
 \end{array}
 \label{eqn:L_QGC}
 \end{equation}
-
-where, $e_{\gamma} = gsin\theta_{W}$; $e_{W} = \frac{e_{\gamma}}{2\sqrt{2}sin\theta_{W}}$ $\&$ $e_{Z} = e_{\gamma}cot\theta_{W}$ are the precise coupling strengths for vector boson self-interaction. Both triple and quartic neutral couplings, such as $ZZZ$ or $ZZZZ$ are absent in the SM. 
+where, $e_{\gamma} = g\sin\theta_{W}$; $e_{W} = \frac{e_{\gamma}}{2\sqrt{2}\sin\theta_{W}}$ $\&$ $e_{Z} = e_{\gamma}\cot\theta_{W}$ are the precise coupling strengths for vector boson self-interaction. Both triple and quartic neutral couplings, such as $ZZZ$ or $ZZZZ$ are absent in the SM. 
 
 Similarly, the couplings of Higgs to vector bosons are also predicted precisely by the BEH mechanism in equation \ref{eqn:LagBEHKin} as:
 
@@ -74,4 +73,4 @@ Similarly, the couplings of Higgs to vector bosons are also predicted precisely 
 
 The EWK production of $ZZjj$ is extremely sensitive to any possible anomalous triple gauge couplings (aTGC), anomalous quartic gauge couplings (aQGC), or anomalous Higgs to vector boson coupling \cite{SensitivityNP} \cite{EboliModelaQGC} \cite{BSM_Simple2HDM}. Therefore, it is imperative to probe the high energy behavior of the EWK production of $ZZjj$ to seek possible deviations from the physics processes beyond the Standard Model (BSM). 
 
-The EWK $ZZjj$ production with each $Z$ boson decaying to a pair of same-flavor opposite-charge (SF-OC) lepton pairs is an extremely rare process. Moreover, with limited statistics in Run$-2$, the QCD background processes dominate the $ZZjj \rightarrow 4\ell jj$ final state \cite{ATLASZZjj}. Therefore, the differential cross-sections discussed in this thesis are measured in a VBS-enhanced phase space with a high fraction of events resulting from the EWK $ZZjj$ process. The enhanced phase space relies on the characteristic feature of the EWK process with two jets (jj) in the forward-backward region originating from the scattered initial-state quarks. These jets have significant rapidity separation and no additional hadronic activity from the hard scattering between the two jets \cite{RapidityGapCite}. The decay of the two Z bosons into SF-OC muons or electron pairs defines the final signature of the VBS-$ZZjj$-like event.
+The EWK $ZZjj$ production with each $Z$ boson decaying to a pair of same-flavor opposite-charge (SF-OC) lepton pairs is an extremely rare process. Moreover, with limited statistics in Run$-2$, the QCD background processes dominate the $ZZjj \rightarrow 4\ell jj$ final state \cite{ATLASZZjj}. Therefore, the differential cross-sections discussed in this thesis are measured in a VBS-enhanced phase space with a high fraction of events resulting from the EWK $ZZjj$ process. The enhanced phase space relies on the characteristic feature of the EWK process with two jets (jj) in the forward-backward region originating from the scattered initial-state quarks. These jets have significant rapidity separation, and no additional hadronic activity from the hard scattering between the two jets \cite{RapidityGapCite}. The decay of the two Z bosons into SF-OC muons or electron pairs defines the final signature of the VBS-$ZZjj$-like event.
