--- a/sections/theory_StandardModel.tex
+++ b/sections/theory_StandardModel.tex
@@ -9,20 +9,19 @@ The fundamental particles of the SM and their interactions can be described by c
 
 According to Noether's theorem, a quantity is conserved for each continuous transformation that leaves the Lagrangian invariant \cite{NoetherTheorem}. Several interesting physical quantum numbers are conserved as a consequence of the symmetries respected by the SM. The $SU(3)_{C}$ in QCD conserves color charge. Weak isospin (I) and weak hypercharge (Y) are the quantum numbers associated with the $SU(2)_{L}$ and $U(1)_{Y}$ gauge groups, respectively. At low energies the $SU(2)_{L}~\otimes~U(1)_{Y}$ symmetry is spontaneously broken and will be discussed in Section \ref{subsubsec:EWkUni}. The $SU(2)_{L}$ group follows a chiral structure where the gauge fields couple explicitly to the left-handed (LH) chiral fermions states and the right-handed (RH) chiral anti-fermions states.
 
-The SM also respects CPT symmetry, a combination of three additional discrete symmetries, charge conjugation (C), parity (P), and time-reversal (T). The charge-conjugation transformation transforms particles to anti-particles by reversing the quantum numbers, whereas the parity transformation transforms left-handed particles to right-handed particles.
-
+The SM also respects CPT symmetry, a combination of three additional discrete symmetries, charge conjugation (C), parity (P), and time-reversal (T). The charge-conjugation transformation transforms particles to anti-particles by reversing the quantum numbers, whereas the parity transformation transforms left-handed particles to right-handed particles and vice-versa.
 
 \subsection{Particles and Fields}
 \label{subsec:Constituents}
 
 \begin{figure}[H]
-	\centering
+    \centering
     \includegraphics[width=0.7\textwidth] {figures/Theory/SMparticles.pdf}\hspace{1cm}
     \caption{ The seventeen fundamental particles of the SM include three generations of twelve fermions, four gauge bosons, and the scalar Higgs bosons. \cite{SMFigureWiki}}
     \label{fig:SM}
 \end{figure}
 
-The twelve half-integer-spin fermions can be distinguished further into two categories, leptons and quarks, each having three generations of particles with similar properties as shown schematically by figure \ref{fig:SM}. For each fermion, there exists an anti-fermion with the same additive quantum numbers but with opposite signs. Four spin $1$ bosons shown in Table \ref{tab:VectorBosons} are collectively called the gauge bosons. Quanta of these gauge fields mediate the electromagnetic, weak, and strong interactions and are invariant under various local gauge transformations \cite{Bernabeu2021}. As summarized by Table \ref{tab:FermionInteraction}, fermions take part in different interactions. A gauge coupling parameter governs the strength of the interaction.
+The twelve half-integer-spin fermions can be distinguished further into two categories, leptons, and quarks, each having three generations of particles with similar properties as shown schematically by Figure \ref{fig:SM}. For each fermion, there exists an anti-fermion with the same additive quantum numbers but with opposite signs. Four spin $1$ bosons shown in Table \ref{tab:VectorBosons} are collectively called the gauge bosons. Quanta of these gauge fields mediate the electromagnetic, weak, and strong interactions and are invariant under various local gauge transformations \cite{Bernabeu2021}. As summarized by Table \ref{tab:FermionInteraction}, fermions take part in different interactions. A gauge coupling parameter governs the strength of the interaction.
 
 Massless photon ($\gamma$) mediates the electromagnetic interaction, whereas the massive $W$ and $Z$ bosons mediate weak interaction. The electric charge (Q), which is conserved in all interactions, is related to the isospin and hypercharge by $Q=I_3 + \frac{Y}{2}$, where $I_3$ is the third component of the weak isospin. As a consequence of the chiral structure of $SU(2)_{L}$, each generation of fermion contains a left-handed doublet with $I_{3}=\pm\frac{1}{2}$ and a right-handed singlet carrying $I_{3}=0$ as shown in Table \ref{tab:Fermions}. 
 
@@ -31,11 +30,11 @@ Massless photon ($\gamma$) mediates the electromagnetic interaction, whereas the
 \begin{center}
 \begin{tabular}{| c | c | c | c | c | c |}
 \hline
-\multicolumn{2}{|c|}{Interaction Type }	& Particle 		          & 	Q 		& 	Mass $[GeV]$ 		& Symmetry Group \\ 
+\multicolumn{2}{|c|}{Interaction Type } & Particle                &     Q       &   Mass $[GeV]$        & Symmetry Group \\ 
 \hline
-\multirow{3}{*} {Electroweak}  & Electromagnetic 		& Photon ($\gamma$)      &   	   0                    & 	$0$	 			&  \multirow{3}{*}{$SU(2)~\otimes~U(1)$}		\\
-					      &  \multirow{2}{*} { Weak }          		& $W^{\pm}$	&   $\pm1$	&	$80.4$	&		\\
-    	  				       &	  &	$Z$ boson  			& $0$ 		    	         & 	          $91.2$			&   		  \\
+\multirow{3}{*} {Electroweak}  & Electromagnetic        & Photon ($\gamma$)      &         0                    &   $0$             &  \multirow{3}{*}{$SU(2)~\otimes~U(1)$}        \\
+                          &  \multirow{2}{*} { Weak }               & $W^{\pm}$ &   $\pm1$  &   $80.4$  &       \\
+                               &      & $Z$ boson           & $0$                        &            $91.2$            &             \\
 \hline
 \multicolumn{2}{|c|}{Strong } & gluons (g) &  0 & 0 & $SU(3)$ \\
 \hline 
@@ -63,9 +62,9 @@ Massless photon ($\gamma$) mediates the electromagnetic interaction, whereas the
 \end{center}
 \end{table}
 
-Each generation of lepton, electron $(e)$, muon $(\mu)$ and tau $(\tau)$ is accompanied by a neutral particle called neutrino $(\nu)$ with same lepton flavor $(\nu_e, \nu_{\mu} \& \nu_{\tau})$. The SM neutrinos are their own anti-particles, and the theory only predicts the left-handed neutrinos. The SM conserves the lepton flavor in all interactions.
+Each generation of lepton, electron $(e)$, muon $(\mu)$ and tau $(\tau)$ is accompanied by a neutral particle called neutrino $(\nu)$ with same lepton flavor $(\nu_e, \nu_{\mu} ~\&~ \nu_{\tau})$. In SM, anti-neutrinos have an opposite lepton flavor quantum number than neutrinos. The lepton flavor is conserved in all interactions.
 
-The quarks are categorized further into two categories, the up-type quarks with $+\frac{2}{3}$ charge and the down-type quarks with $-\frac{1}{3}$ charge. Up $(u)$, charm  $(c)~,~\&$ top $(t)$ are the first, second, and third generation of the up-type quarks, while the down $(d)$, strange $(s)$ $\&$ bottom $(b)$ are the three generations of the down-type quarks. The quarks interact strongly with one another by strong interaction mediated by the massless neutral gluons, which follow from $SU(3)$ gauge symmetry by exchange of color charges. Each quark can have either one of the three color charges (red, blue $\&$, green), whereas an anti-quark can have either an anti-red, anti-blue or anti-green color charge. There are eight gluons in the SM with color charges formed by a combination of either of the two color charges. Since gluons have a color charge, they interact with other gluons strongly. Only color-neutral hadronic states formed by a combination of quarks and gluons are observed experimentally.
+The quarks are categorized further into two categories, the up-type quarks with $+\frac{2}{3}$ charge and the down-type quarks with $-\frac{1}{3}$ charge. Up $(u)$, charm  $(c)~,~\&$ top $(t)$ are the first, second, and third generation of the up-type quarks, while the down $(d)$, strange $(s)$ $\&$ bottom $(b)$ are the three generations of the down-type quarks. The quarks interact strongly with one another by strong interaction mediated by the massless neutral gluons, which follow from $SU(3)$ gauge symmetry by exchange of color charges. Each quark can have either one of the three color charges (red, blue $\&$, green), whereas an anti-quark can have either an anti-red, anti-blue, or anti-green color charge. There are eight gluons in the SM with color charges formed by a linear combination of color with an anti-color charge excluding the colorless combination. Since gluons have a color charge, they interact with other gluons strongly. Only color-neutral hadronic states formed by a combination of quarks and gluons are observed experimentally.
 
 \begin{table}
 \caption{Electroweak quantum numbers of the SM half-integer spin fermions (quarks and leptons) arranged in a left-handed $SU(2)$ doublet and right-handed $SU(2)$ singlet. The down-type left-handed quarks in $SU(2)_{L}$ quark doublets $d^{'},~s^{'}~ \&~b^{'}$ are linear combinations of $d,~s,~b$ quarks \cite{Halzen:1984mc}.}
@@ -73,33 +72,33 @@ The quarks are categorized further into two categories, the up-type quarks with 
 \begin{center}
 \begin{tabular}{| c | c | c | c | c | c | c |}
 \hline
-{Particle Types }			& First		& Second	&   Third        & 	$I_{3}$ 	& Y & Q  \\ 
+{Particle Types }           & First     & Second    &   Third        &  $I_{3}$     & Y & Q  \\ 
 \hline
-\hline					
-\multirow{5}{*} {Leptons}  	
-	& & & & & & \\
-					& $\begin{pmatrix}  e \\ \nu_{e} \end{pmatrix}_{L}$ 
-					& $\begin{pmatrix}  \mu \\ \nu_{\mu} \end{pmatrix}_{L}$
-					& $\begin{pmatrix}  \tau \\ \nu_{\tau} \end{pmatrix}_{L}$  
-					& $\begin{matrix} -\frac{1}{2} \\[0.15cm] \frac{1}{2} \end{matrix}$ 
-					& $\begin{matrix} -1 \\ -1 \end{matrix}$   
-					& $\begin{matrix} -1 \\ 0 \end{matrix}$ \\		
-	& & & & & & 	\\				
-					& $e_{R}$ & $\mu_{R}$ &  $\tau_{R}$ & $0$ & $-2$  & $-1$ \\
+\hline                  
+\multirow{5}{*} {Leptons}   
+    & & & & & & \\
+                    & $\begin{pmatrix}  e \\ \nu_{e} \end{pmatrix}_{L}$ 
+                    & $\begin{pmatrix}  \mu \\ \nu_{\mu} \end{pmatrix}_{L}$
+                    & $\begin{pmatrix}  \tau \\ \nu_{\tau} \end{pmatrix}_{L}$  
+                    & $\begin{matrix} -\frac{1}{2} \\[0.15cm] \frac{1}{2} \end{matrix}$ 
+                    & $\begin{matrix} -1 \\ -1 \end{matrix}$   
+                    & $\begin{matrix} -1 \\ 0 \end{matrix}$ \\      
+    & & & & & &     \\              
+                    & $e_{R}$ & $\mu_{R}$ &  $\tau_{R}$ & $0$ & $-2$  & $-1$ \\
 \hline
 \hline
-\multirow{8}{*} {	Quarks}  	
+\multirow{8}{*} {   Quarks}     
 & & & & & & \\
-					 &$\begin{pmatrix}  u \\ d^{'} \end{pmatrix}_{L}$ 
-					 &$\begin{pmatrix}  c \\ s^{'} \end{pmatrix}_{L}$
-					 &$\begin{pmatrix}  t \\ b{'} \end{pmatrix}_{L}$  
-					&$\begin{matrix} \frac{1}{2} \\[0.15cm] -\frac{1}{2} \end{matrix}$
-					&$\begin{matrix} \frac{1}{3} \\[0.15cm] \frac{1}{3} \end{matrix}$
-					&$\begin{matrix} \frac{2}{3} \\[0.15cm] -\frac{1}{3} \end{matrix}$\\
-				& & & & & & \\
-					& $u_{R}$ & $c_{R}$ &  $t_{R}$ & $0$ & $\frac{4}{3}$  & $\frac{2}{3}$ \\
-					& & & & & & \\
-					& $d_{R}$ & $s_{R}$ &  $b_{R}$ & $0$ & $-\frac{2}{3}$  & $-\frac{1}{3}$ \\
+                     &$\begin{pmatrix}  u \\ d^{'} \end{pmatrix}_{L}$ 
+                     &$\begin{pmatrix}  c \\ s^{'} \end{pmatrix}_{L}$
+                     &$\begin{pmatrix}  t \\ b{'} \end{pmatrix}_{L}$  
+                    &$\begin{matrix} \frac{1}{2} \\[0.15cm] -\frac{1}{2} \end{matrix}$
+                    &$\begin{matrix} \frac{1}{3} \\[0.15cm] \frac{1}{3} \end{matrix}$
+                    &$\begin{matrix} \frac{2}{3} \\[0.15cm] -\frac{1}{3} \end{matrix}$\\
+                & & & & & & \\
+                    & $u_{R}$ & $c_{R}$ &  $t_{R}$ & $0$ & $\frac{4}{3}$  & $\frac{2}{3}$ \\
+                    & & & & & & \\
+                    & $d_{R}$ & $s_{R}$ &  $b_{R}$ & $0$ & $-\frac{2}{3}$  & $-\frac{1}{3}$ \\
 & & & & & & \\
 \hline
 \end{tabular}
@@ -107,7 +106,7 @@ The quarks are categorized further into two categories, the up-type quarks with 
 \end{center}
 \end{table}
 
-Higgs boson is the only spin-0 scalar particle in the SM and has no charge. It gives masses to all other particles through Spontaneous Symmetry Breaking, which is discussed in Section \ref{subsubsec:EWkUni}.
+Higgs boson is the only spin-0 scalar particle in the SM and has no charge. It gives masses to the three weak bosons ($W^{\pm} ~\&~ Z$), all quarks, and charged leptons through Spontaneous Symmetry Breaking, which is discussed in Section \ref{subsubsec:EWkUni}.
 
 \subsection{Theoretical Formulation of the Standard Model}
 \label{subsec:TheoryFormulation}
@@ -116,38 +115,35 @@ Relativistic quantum field theory is the theoretical framework of the SM that de
 
 \subsubsection{Lagrangian of the Standard Model}
 \label{subsubsec:SMLag}
-The Lagrangian density given in equation \ref{eqn:SMLagrangian} describes the dynamics of the SM and is invariant under the local gauge transformation of the $SU(3)_{C}~\otimes~SU(2)_{L}~\otimes~U(1)_{Y}$ symmetry group. 
+The compact Lagrangian density given in equation \ref{eqn:SMLagrangian} describes the dynamics of the SM and is invariant under the local gauge transformation of the $SU(3)_{C}~\otimes~SU(2)_{L}~\otimes~U(1)_{Y}$ symmetry group. 
 \begin{equation}
-\mathcal{L_{SM}} = -\frac{1}{4}F_{\mu\nu}F^{\mu\nu} ~+~ i\bar{\psi}\gamma^{\mu}D_{\mu}\psi ~+~ |D_{\mu}\phi|^{2} ~+~ -V(\phi) + \bar{\psi_{i}}y_{ij}\psi_{j}\phi ~+~ h.c.
+\mathcal{L_{SM}} = -\frac{1}{4}F_{\mu\nu}F^{\mu\nu} ~+~ i\bar{\psi}\gamma^{\mu}D_{\mu}\psi ~+~ |D_{\mu}\phi|^{2} ~-~V(\phi) + \bar{\psi_{i}}y_{ij}\psi_{j}\phi ~+~ h.c.
 \label{eqn:SMLagrangian}
 \end{equation}
 
-The first term $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ describes the dynamics of the gauge boson interactions, the second term $i\bar{\psi}\gamma^{\mu}D_{\mu}\psi$ describes the interaction of the fermion fields. The third term $|D_{\mu}\phi|^{2}$ describes the couplings between the Higgs boson and gauge bosons, whereas the term $V(\phi)$ represents the Higgs potential and its self-interactions. The second last term $\bar{\psi_{i}}y_{ij}\psi_{j}\phi$ generates masses for fermions based on their Yukawa couplings $y_{ij}$ to the Higgs field. Similarly, the last term $h.c.$ generates masses for anti-fermions. 
-
+The first term $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ describes the dynamics of the gauge boson interactions, the second term $i\bar{\psi}\gamma^{\mu}D_{\mu}\psi$ describes the interaction of the fermion fields. The third term $|D_{\mu}\phi|^{2}$ describes the couplings between the Higgs boson and gauge bosons, whereas the term $V(\phi)$ represents the Higgs potential and its self-interactions. The second last term $\bar{\psi_{i}}y_{ij}\psi_{j}\phi$ generates masses for fermions based on their Yukawa couplings $y_{ij}$ to the Higgs field. Similarly, the last term $h.c.$ generates masses for anti-fermions. In reality, the SM lagrangian density, as shown by equation \ref{eqn:SMLagrangian}, is a combination of complex interactions that follow various local gauge symmetries, and concise derivations of different interactions are discussed individually in the following few sections.
+ 
 \subsubsection{Quantum Electrodynamics}
 \label{subsubsec:QED}
-Quantum electrodynamics describes electromagnetic interaction. The Lagrangian density ($\mathcal{L}_{Dirac}$) describes the free propagation of a fermion in a vacuum as:  
+Quantum electrodynamics describes the electromagnetic interaction. The Lagrangian density ($\mathcal{L}_{Dirac}$) describes the free propagation of a fermion in a vacuum as:  
 
 \begin{equation}
 \mathcal{L}_{Dirac} = \bar{\psi} i \gamma^{\mu} \partial_{\mu} \psi ~-~ m\bar{\psi}\psi
 \label{eqn:DiracLag}
 \end{equation}
-
-where $\psi$ is the fermionic spinor, $\gamma^{\mu}$ represents the Dirac matrices with $\mu$ being the Lorentz index running from $0$ to $3$, $\partial^{\mu}$ is the covariant derivative and m is the mass of the fermion. 
+where $\psi$ is the fermionic spinor, $\gamma^{\mu}$ represents the Dirac matrices with $\mu$ being the Lorentz index running from $0$ to $3$, and m is the mass of the fermion. 
 
 The Lagrangian in equation \ref{eqn:DiracLag} is invariant under a $U(1)$ global gauge transformation, 
 \begin{equation}
-\psi\rightarrow \psi^{'}=e^{iq\alpha}\psi, 
+\psi\rightarrow \psi^{'}=e^{iq\alpha}\psi 
 \label{eqn:QEDGlobalTrans}
 \end{equation}
-
 where q is a parameter of the transformation itself and $\alpha$ is a real phase factor. However, under the local gauge transformation of form 
 
 \begin{equation}
 \psi\rightarrow \psi^{'}=e^{iq\alpha(x)}\psi
 \label{eqn:QEDLocalTrans}
 \end{equation}
-
 where $\alpha$ depends on $x~=~(x_{0},x_{1},x_{2},t)$ the Dirac Lagrangian in equation \ref{eqn:DiracLag} is not invariant. 
 
 To make the Lagrangian of equation \ref{eqn:DiracLag} invariant, a gauge field $A_{\mu}$ with the following transformation properties is introduced, 
@@ -156,7 +152,6 @@ To make the Lagrangian of equation \ref{eqn:DiracLag} invariant, a gauge field $
 A_{\mu}\rightarrow A_{\mu} - \partial _{\mu} \alpha
 \label{eqn:QEDGaugeField}
 \end{equation}  
-
 $A_{\mu}$ couples to fermionic fields $\psi(x,t)$ with strength q. A covariant derivative specific to the local gauge transformation is defined as:
 
 \begin{equation}
@@ -170,7 +165,6 @@ The quantity $q$ can be interpreted as the electric charge $-e$ of fermion, whic
 \mathcal{L} = \bar{\psi} ( i \gamma^{\mu} D_{\mu} ~-~ m) \psi
 \label{eqn:QEDInvLag}
 \end{equation}
-
 which is invariant under $U(1)$ gauge transformation respecting the $U(1)$ gauge symmetry. 
 
 The gauge field $A_{\mu}$ can be interpreted as the photon field and is related to the electromagnetic field tensor by
@@ -186,8 +180,11 @@ The gauge invariant kinetic term of photon $-\frac{1}{4}F_{\mu\nu}F^{\mu\nu}$ ca
 \mathcal{L}_{QED} = -\frac{1}{4}F_{\mu\nu}F^{\mu\nu} + \bar{\psi} ( i \gamma^{\mu} D_{\mu} ~-~ m) \psi
 \label{eqn:QEDFullLag}
 \end{equation}
-
-$\mathcal{L}_{QED}$ in equation \ref{eqn:QEDFullLag} is the full Lagrangian for QED, and the electromagnetic phenomena can be derived by solving for the equations of motion applying the Lorentz gauge condition $\partial_{\mu}A^{\mu}=0$. 
+$\mathcal{L}_{QED}$ in equation \ref{eqn:QEDFullLag} is the full Lagrangian for QED, and the electromagnetic phenomena can be derived by solving for the equations of motion applying the Lorentz gauge condition $\partial_{\mu}A^{\mu}=0$. A small dimensionless coupling constant $\alpha$ determines the relative strength of the QED interactions. The probability of particle interactions and decay rates can be calculated as the square modulus of a perturbative series in powers of $\alpha$. The value of $alpha$ depends on the energy scale due to the additional contributions from the vacuum polarization of virtual quark and virtual lepton loop corrections. For a given momentum transfer squared $q^2$ of the exchanged photon, the effective coupling constant depends on the $\alpha_{0} = \frac{e^2}{4\pi}$ as, 
+\begin{equation}
+    \alpha(q^2) = \frac{\alpha_{0} (q^2=0)}{1-\Delta \alpha(q^2)}
+\end{equation}
+with the small value of $\alpha_{0} \approx \frac{1}{137.036}$ \cite{AlphaQED}.
 
 \subsubsection{Quantum Chromodynamics }
 \label{subsubsec:QCD}
@@ -200,14 +197,12 @@ The Dirac Lagrangian for a quark can be modified to include all possible colors 
 \mathcal{L} = \bar{q_{j}}(i\gamma^{\mu}\partial_{\mu} - m )q_{j}
 \label{eqn:QCDStartL}
 \end{equation}
-
 The generators of the $SU(3)$ group are eight linearly independent traceless Gell-Mann matrices that do not commute with each other such that 
 
 \begin{equation}
 [ T_{a},T_{b} ] = if_{abc}T_{c}
 \label{eqn:SU3GellManMat}
 \end{equation}
-
 where $f_{abc}$ is the structure constant of $SU(3)$
 
 The local $SU(3)$ gauge transformation is 
@@ -216,31 +211,26 @@ The local $SU(3)$ gauge transformation is
 q(x) \rightarrow e^{i \alpha_a(x) T_{a}} q(x)
 \label{eqn:QCDSU3LT}
 \end{equation}
-
 where $T_{a} = \frac{\lambda_{a}}{2}$, and $a = {1,2...8}$. To understand the source of gauge invariance in the Lagrangian in equation \label{eqn:SU3LocalGaugeTransform}, we can consider an infinitesimal transformation of the color field as 
 
 \begin{equation}
 q(x) \rightarrow [ 1 + i\alpha_{a}(x)T_{a}]q(x) \\
 \ni ~ \partial_{\mu}q \rightarrow ( 1 + i\alpha_{a}T_{a})\partial_{\mu}q + iT_{a}q\partial_{\mu} \alpha_{a}
 \end{equation}
-
 The last term $iT_{a}q\partial_{\mu} \alpha_{a}$ breaks the gauge invariance. Similar to QED, eight gauge fields corresponding to each $a = {1,2...8} ~ G_{\mu}^{a}$ with following transformation properties are introduced 
 
 \begin{equation}
 G_{\mu}^{a} \rightarrow G_{\mu}^{a} - \frac{1}{g_{s}} \partial_{\mu} \alpha_{a} - f_{abc}\alpha_{b}G^{c}_{\mu}
 \label{eqn:SU3GaugeField}
 \end{equation}
-
 These gauge fields $G_{\mu}^{a}$ are the gluon fields. Similar to QED, the covariant derivative is defined as
 \begin{equation}
 D_{\mu} = \partial_{\mu} + ig_{s}\frac{\lambda_{a}}{2}G_{\mu}^{a} 
 \label{eqn:SU3CovDerv}
 \end{equation}
-
 where $g_{s}$ is the coupling strength of the gluon fields to the quark fields.
 
 The Lagrangian density in equation \ref{eqn:QCDStartL} is then 
-
 \begin{equation}
 \mathcal{L} = \bar{q_{j}}(i\gamma^{\mu}D_{\mu} - m )q_{j}
 \label{eqn:QCDInvLag}
@@ -259,11 +249,20 @@ Therefore, the complete $SU(3)$ gauge invariant Lagrangian describing the quarks
 \label{eqn:QCDCompleteLag}
 \end{equation}
 
+Similar to QED, the probability of particle interactions and decay rates in QCD can be calculated as the square-modulus of a perturbative series in
+powers of the strong coupling constant $\alpha _{S} ~(=\frac{g_{S}^2}{4\pi})$ which depends on the energy scale. The energy-dependent effective strong coupling is, 
+\begin{equation}
+    \alpha_{S}(q^2) = \frac{12\pi}{(33-2n_{f}).\ln(q^2/\Lambda_{QCD})}
+\end{equation}
+where $n_{f}$ is the number of types of quarks with masses lower than the energy scale, and $\Lambda_{QCD}\approx0.2$ GeV is the \textit{Landau pole} below which the coupling constant increases and diverges \cite{AlphaQCD}. There are two important experimental consequences of the running of the strong coupling constant; first, quarks and gluons cannot be isolated at low energies, leading to \textit{color confinement}. Second, at high energies, the strong interaction reaches \textit{asymptotic freedom}, and the exchange of gluons requires minimum energy, causing an abundance of gluon-induced QCD processes at hadron colliders \cite{AlphaQCD}. 
+
 \subsubsection{Electroweak Theory}
 \label{subsubsec:EWkUni}
-Weak interactions describe the interactions mediated by massive gauge bosons. Fermi formulated the weak interaction in $1934$ to explain the beta decay using four fermion interaction vertex. The formulation successfully describes the beta decay at low energies when the interaction energy is much smaller than the $W$ boson mass. A unified electroweak theory was formulated by Glashow in $1961$ \cite{GLASHOW1961579} by extending the $SU(2)$ symmetric non-Abelian gauge theory developed by Yang and Mills in $1954$ \cite{PhysRev.96.191} to $SU(2)~\otimes~U(1)$ gauge theory. Above the unification threshold, the differences in the electromagnetic and weak interactions are not apparent.
+Weak interactions describe the interactions mediated by massive gauge bosons, for example, radioactive beta decay, where a neutron turns into a proton by emitting an electron and an anti-electron-neutrino. The Dirac equation formulated in $1930$s could explain the motions of electrons via relativistic quantum mechanics. However, the nuclear decay processes were still a mystery. Fermi developed the first theory of weak interaction to explain beta decay using four fermion interaction vertex. The formulation successfully describes the beta decay at low energies when the interaction energy is much smaller than the $W$ boson mass. In the meantime, QED following the $U(1)$ symmetry was formulated to explain the electromagnetic interaction. Experimental evidence suggested that an exchange of spin-1 massive particles mediates the weak interactions. It was challenging to develop a local gauge invariant mathematical theory, including spin-1 massive gauge bosons, which conserves unitarity at high energies. 
 
-Experimental observations suggest weak interactions violate parity by only affecting the left-handed fermion and right-handed anti-fermion fields. Thus the unified electroweak theory are described by $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge interactions. Similar to the electric charge $Q$ conserved in QED by $U(1)$ symmetry, the weak hypercharge ($Y=2(Q-I_{3})$) related to the electric charge and the weak isospin $I_{3})$ is conserved by the $U(1)_{Y}$ symmetry. The fermion fields are represented by the left-handed doublets $\chi_{L}$ and the right-handed singlets $\psi_{R}$, introduced in table \ref{tab:Fermions}. The doublet and singlet field for the first generation of leptons and quarks are, 
+During the 1960s, Glashow, Salam, and Weinberg (GWS) worked independently and made different contributions to formulate a theoretical model of weak interactions following a local gauge invariance of $SU(2)_{L}~\otimes~U(1)_{Y}$ \cite{GLASHOW1961579}\cite{EWK_W}\cite{EWK_S}. The theory postulates the existence of four massless gauge bosons, two electrically-charged and two electrically-neutral, which mediate unified electromagnetic and weak interactions. However, the observed short range of weak force could only be explained with massive gauge bosons of electroweak interactions. Therefore, implying the underlying symmetry of weak interactions is broken by some mechanism, which was later understood through the Higgs Mechanism discussed in Section \ref{subsubsec:HiggsMech}. 
+
+Experimental observations suggest weak interactions violate parity by only affecting the left-handed fermion and right-handed anti-fermion fields. Thus, the unified electroweak theory is described by $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge interactions. Similar to the electric charge $Q$ conserved in QED by $U(1)$ symmetry, the weak hypercharge ($Y=2(Q-I_{3})$) related to the electric charge and the weak isospin $(I_{3})$ is conserved by the $U(1)_{Y}$ symmetry. The fermion fields are represented by the left-handed doublets $\chi_{L}$ and the right-handed singlets $\psi_{R}$, introduced in table \ref{tab:Fermions}. The doublet and singlet field for the first generation of leptons and quarks are, 
 
 \begin{center}
 $ \chi_{L} = \begin{pmatrix} \nu_{e} \\ e\end{pmatrix}_{L}$ \hspace{5pt} $\&$ \hspace{5pt} $ \chi_{L} = \begin{pmatrix}  u \\ d \end{pmatrix}_{L}$ \\
@@ -281,13 +280,11 @@ The Lagrangian for these fermion fields should be invariant under local gauge tr
 \psi_{R} \rightarrow e^{i\beta(x)Y} \psi_{R}
 \label{eqn:SU2RHTransform}
 \end{equation}
-
 where, $\beta(x)$ and $\alpha(x)$ are the local phase transformation for $U(1)_{Y}$ and $SU(2)_{L}$ symmetry groups respectively. Weak hypercharge operator $Y$ and Pauli matrices $\tau_{a=1,2,3}$ are generators of $U(1)_{Y}$ and $SU(2)_{L}$ symmetry groups respectively. Similar to the formulation in QED and QCD discussed in Section \ref{subsubsec:QED} and \ref{subsubsec:QCD}, four new field strength tensors $B_{\mu\nu}$ and $W^{a}_{\mu\nu}$ corresponding to respectively the $U(1)_{Y}$ and $SU(2)_{L}$ transformations are introduced. The  $SU(2)_{L}~\otimes~U(1)_{Y}$ gauge-invariant Lagrangian for a massless fermion and massless gauge fields is:
 \begin{equation}
 \mathcal{L}_{0} = \bar{\chi_{L}}\gamma^{\mu} [i\partial_{\mu} - g \frac{\tau_{a}}{2} W^a_{\mu} + \frac{g^{'}}{2} B_{\mu} ] \chi_{L} + \bar{\psi_{R}} \gamma^{\mu} [ i \partial_{\mu} + g^{'} B_{\mu} ] \psi_{R} - \frac{1}{4} W_{\mu\nu}^{a} W^{\mu\nu}_{a} - \frac{1}{4} B_{\mu\nu} B^{\mu\nu}
 \label{eqn:EWKLagrangian1}
 \end{equation}
-
 where similar to QED and QCD, field strength tensors are defined in terms of the covariant derivative to preserve gauge-invariance in kinetic terms as,
 
 \begin{equation}
@@ -298,7 +295,6 @@ B_{\mu\nu} = \partial_{\mu}B_{\nu} - \partial_{\nu}B_{\mu}
 W_{\mu\nu}^{a} = \partial_{\mu}W_{\nu}^{a} - \partial_{\nu}W_{\mu}^{a} + g\epsilon^{abc}W_{\mu}^{b}W_{\nu}^{c}
 \label{eqn:SU2FST}
 \end{equation}
-
 The non-Abelian part of the $SU(2)_{L}$ transformation is represented by the last term of equation \ref{eqn:SU2FST}, which gives the quartic and triple self-interactions between the gauge bosons with coupling strength $g$. 
 
 The electroweak Lagrangian in equation \ref{eqn:EWKLagrangian1} contains two terms, one of which gives rise to the charged-current interaction with the two $SU(2)$ boson field 
@@ -320,10 +316,9 @@ The $SU(2)_{L}$ charged-current interaction Lagrangian for the next two generati
 
 The neutral-current Lagrangian is given by, 
 \begin{equation}
-\mathcal{L}_{NC} = \sum_{j}{ \bar{\psi_{j}} \gamma^{\mu} \{ A_{\mu} [ g \frac{\tau_{3}}{2} sin\theta_{W} + g^{'} Y cos\theta_{W} ] + Z_{\mu} [ \frac{\tau_{3}}{2} cos\theta_{W} - g^{'} Y sin\theta_{W}] \} \psi_{j} }
+\mathcal{L}_{NC} = \sum_{j}{ \bar{\psi_{j}} \gamma^{\mu} \{ A_{\mu} [ g \frac{\tau_{3}}{2} \sin\theta_{W} + g^{'} Y \cos\theta_{W} ] + Z_{\mu} [ \frac{\tau_{3}}{2} \cos\theta_{W} - g^{'} Y \sin\theta_{W}] \} \psi_{j} }
 \label{eqn:SU2NCLag}
 \end{equation}
-
 where the two neutral gauge fields $Z_{\mu}$ and $A_{\mu}$ associated with $Z$ boson and photon governing the weak neutral and electromagnetic interactions are obtained from an arbitrary linear combination of the $W^{3}_{\mu}$ and $B_{\mu}$ fields as 
 \begin{equation}
 \begin{pmatrix} A_{\mu} \\ Z_{\mu} \end{pmatrix} =  \begin{pmatrix} cos{\theta_{W}} & sin{\theta_{W}} \\ -sin{\theta_{W}} & cos{\theta_{W}} \end{pmatrix} \begin{pmatrix} B_{\mu} \\ W^{3}_{\mu} \end{pmatrix}
@@ -332,14 +327,15 @@ where the two neutral gauge fields $Z_{\mu}$ and $A_{\mu}$ associated with $Z$ b
 
 The following condition is imposed to obtain QED from $A_{\mu}$:
 \begin{equation}
-g sin\theta_{W} = g^{'} cos\theta_{W} = e ~\& ~  Y= Q - T_{3}
+g \sin\theta_{W} = g^{'} \cos\theta_{W} = e ~\& ~  Y= Q - T_{3}
 \label{eqn:QEDFromEWk}
 \end{equation}
 where $T_{3}=\frac{\tau_{3}}{2}$ is the weak isospin and $\theta_{W}$ is the Weinberg mixing angle, which can be measured experimentally and expressed in terms of the two $SU(2)_{L}$ coupling $g^{'}$ and $U(1)_{Y}$ coupling $g$ as:
 \begin{equation}
-sin\theta_{W} = \frac{g^{'}}{\sqrt{g^{2} +  g^{'2} }} ~\&~ cos\theta_{W} = \frac{g}{\sqrt{g^{2} +  g^{'2} }}
+\sin\theta_{W} = \frac{g^{'}}{\sqrt{g^{2} +  g^{'2} }} ~\&~ \cos\theta_{W} = \frac{g}{\sqrt{g^{2} +  g^{'2} }}
 \label{eqn:WeinbergAngle}
 \end{equation}
+Similar to QED and QCD, the probability of particle interactions and decay rates in electroweak interactions can be calculated as the square-modulus of a perturbative series in powers of the weak coupling constant $\alpha _{EWK}$. The value of $\alpha _{EWK}$ depends on the energy scale and the type of weak interaction, charged-current, neutral-current, or the non-Abelian self-couplings of the gauge bosons. 
 
 The Lagrangian in equation \ref{eqn:EWKLagrangian1} describes the electroweak interactions only for massless fermions and massless gauge bosons, which contradicts the experimental observations. The mass origin of the fermions and gauge bosons is discussed in Section \ref{subsubsec:HiggsMech} below. 
 
@@ -372,7 +368,6 @@ For $\mu^2 > 0$, the scalar field develops a nonzero Vacuum Expectation Value (V
  \frac{1}{\sqrt{2}} \begin{pmatrix} 0 \\ v \end{pmatrix}
 \label{eqn:ScalarExp}
 \end{equation}
-
 where the Higgs field ($H$) emerges as the excitation from the vacuum state, this choice of the minimum spontaneously breaks the gauge symmetry \cite{DESYHiggsLecture}. 
 
 After substituting the $\phi$ in the Lagrangian in equation \ref{eqn:LagBEH}, the kinetic term takes the form
@@ -385,26 +380,23 @@ After substituting the $\phi$ in the Lagrangian in equation \ref{eqn:LagBEH}, th
 \end{array}
 \label{eqn:LagBEHKin}
 \end{equation}
-
 where the first line is the vacuum energy density and can be ignored in the case of QFT. The second line describes the triple and quartic self-interactions of the Higgs field as well as the mass term of the real scalar field H as $m_{H} = 2\lambda v^2$. The last line contains the mass term for the vector bosons. 
 
 From equations \ref{eqn:LagBEHKin} and \ref{eqn:RealWBosons} is evident the mass of the two charged vector bosons $W^{\pm}$ is $m_{W}=\frac{1}{2}g^2v^2$. Similarly, from equations \ref{eqn:LagBEHKin} and 
 \ref{eqn:NeutralGaugeBosons}, mass of the $Z$ boson is $m_{Z} = \frac{1}{2}(g^2+g^{'})v^2$ and mass of the photon is $m_{\gamma}=0$. 
 
-The initial $SU(2)_{L}$ Lagrangian in equation \ref{eqn:LagBEH} started with four gauge symmetries, which is reduced to a single $U(1)_{Q}$ gauge symmetry associated with the massless vector field in equation \ref{eqn:LagBEHKin}. This phenomenon in the Higgs mechanism is called the Electroweak Symmetry Breaking (EWSB) mechanism. As discussed above, the EWSB mechanism is at the heart of the SM by which the gauge boson gets the mass which also gives rise to the longitudinal polarization of the massive vector bosons. This thesis summarizes a measurement with an experimental sensitivity to such important property of the theory.
+The initial $SU(2)_{L}$ Lagrangian in equation \ref{eqn:LagBEH} started with four gauge symmetries, which is reduced to a single $U(1)_{Q}$ gauge symmetry associated with the massless vector field in equation \ref{eqn:LagBEHKin}. This phenomenon in the Higgs mechanism is called the Electroweak Symmetry Breaking (EWSB) mechanism. As discussed above, the EWSB mechanism is at the heart of the SM by which the gauge boson gets the mass which also gives rise to the longitudinal polarization of the massive vector bosons. This thesis summarizes a measurement with an experimental sensitivity to a such important property of the theory.
 
 The last remaining piece in the SM is adding the fermion mass to the Lagrangian. A simple Lagrangian with the fermion mass can be written as, 
 \begin{equation}
 \mathcal{L}_{mass~fermion} = -m(\bar{\chi_{L}}\psi_{R} + \bar{\psi_{R}}\chi_{L})
 \label{eqn:FermMass}
 \end{equation}
-
 This term violates $SU(2)_{L}$ gauge symmetry because the left-handed fermions are doublets, and the right-handed are singlets. Adding a scalar complex field $\phi =\frac{1}{\sqrt{2}} \begin{pmatrix} 0 \\ v+ H(x) \end{pmatrix}$ in the Lagrangian becomes, 
 \begin{equation}
 \mathcal{L}_{Yukawa,~\ell} = \frac{G_{\ell}v}{\sqrt{2}} (\bar{\chi_{L}}\psi_{R} + \bar{\psi}_{R}\chi_{L} ) - \frac{G_{\ell}}{\sqrt{2}} (\bar{\chi_{L}}\psi_{R} + \bar{\psi}_{R}\chi_{L} )H
 \label{eqn:YukawaLepMass}
 \end{equation}
-
 with arbitrary parameters $G_{\ell =e,\mu,\tau}$. The constant in the first term $\frac{G_{\ell}v}{\sqrt{2}}$ represents the mass of the fermions, whereas the second term gives the interaction of fermions with the Higgs field. 
 
 Similarly, the mass terms for quarks follow but including the down-type quarks, the parameters corresponding to $G_{\ell}$ are matrices $G^{ij}_{q}$ for the quark families $i,j$ and up-type and down-type quarks as:
@@ -413,4 +405,4 @@ Similarly, the mass terms for quarks follow but including the down-type quarks, 
 \label{eqn:YukawaQuarkMass}
 \end{equation}
 
-The final Standard Model Lagrangian is the sum of the QED (equation \ref{eqn:QEDFullLag}), QCD (equation \ref{eqn:QCDInvLag}), Boson self-interactions (equation \ref{eqn:EWKLagrangian1}), Higgs potential and self-interactions ( equation \ref{eqn:LagBEH}), and the Higgs-fermion Yukawa coupling (equations \ref{eqn:YukawaLepMass} $\&$ \ref{eqn:YukawaQuarkMass}), which in a compact form is written as equation \ref{eqn:SMLagrangian}.
+The final Standard Model Lagrangian is the sum of the QED (equation \ref{eqn:QEDFullLag}), QCD (equation \ref{eqn:QCDInvLag}), Boson self-interactions (equation \ref{eqn:EWKLagrangian1}), Higgs potential and self-interactions ( equation \ref{eqn:LagBEH}), and the Higgs-fermion Yukawa coupling (equations \ref{eqn:YukawaLepMass} $\&$ \ref{eqn:YukawaQuarkMass}), which is a compact form is written as equation \ref{eqn:SMLagrangian}. The final electroweak theory of SM with massive gauge bosons tightly constrains the W, Z, and Higgs interactions, their masses, and the self-couplings of gauge bosons in terms of a few parameters. Any deviations from predictions indicate the presence of physics beyond the SM, thus, losing the mathematical underpinnings of the theory. Therefore, this thesis targets precision measurement of the electroweak sector in hopes of detecting  possible deviations caused by BSM effects.
